move curl into script

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,6 @@ jobs:
     
     steps:
     - name: Trigger publish
-      run: curl -XPOST -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type: application/json" -H "Authorization: token $TOKEN" https://api.github.com/repos/cognitect/clojure-org-style/dispatches --data '{"event_type": "publish"}'
+      run: scripts/trigger
       env:
         TOKEN: ${{ secrets.TRIGGER_TOKEN }}
