--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,6 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v3
     - name: Trigger publish
-      run: scripts/trigger
-      env:
-        TOKEN: ${{ secrets.TRIGGER_TOKEN }}
+      run: curl -XPOST -u "${{ secrets.GIT_CREDENTIALS }}" -H "Accept:application/vnd.github" -H "Content-Type:application/json" https://api.github.com/repos/clojure/clojure-org-style/main.yml/dispatches --data '{"event_type": "publish"}'
