--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,8 @@
 name: CI
 
-on: [push]
+on:
+  push:
+  worfklow_dispatch:
 
 jobs:
   build:
@@ -10,4 +12,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Trigger publish
-      run: curl -XPOST -u "${{ secrets.TRIGGER_TOKEN }}" -H "Accept:application/vnd.github.v3+json" -H "Content-Type:application/json" https://api.github.com/repos/clojure/clojure-org-style/dispatches
+      run: gh workflow run main.yml -R clojure/clojure-org-style --ref master
