Schedule event publishing workflow to run daily.

--- a/.github/workflows/publish-events.yml
+++ b/.github/workflows/publish-events.yml
@@ -1,12 +1,11 @@
 name: Daily Event Publishing
 
 on:
-  workflow_dispatch:
-#  schedule:
-#    - cron: '0 0 * * *'  # Daily at midnight UTC
+  schedule:
+    - cron: '0 0 * * *'  # Daily at midnight UTC
 
 jobs:
-  daily-backup:
+  published-daily-events:
     runs-on: ubuntu-latest
 
     steps:
