trigger CI on event publish

--- a/.github/workflows/publish-events.yml
+++ b/.github/workflows/publish-events.yml
@@ -45,4 +45,6 @@ jobs:
           then
               git commit -m 'update events'
               git push
+
+              curl -X POST -H "Authorization:token ${{ secrets.GH_TOKEN }}" -H "Accept:application/vnd.github.v3+json" --data '{"event_type":"publish"}'  https://api.github.com/repos/clojure/clojure-org-style/dispatches
           fi
